# visual-occlusion-reasoning

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: make_libero_occ_composites.py  save_libero_occ_samples.py
scripts/capture/: README.md  save_libero_occ_samples.py
scripts/evaluation/: README.md  compare_pi05_libero_runs.py  eval_pi05_libero.py
scripts/figures/: README.md  make_libero_occ_composites.py  render_wrist_bowl_demo.py  render_wrist_mug_demo.py  render_wrist_occlusion_demo.py
scripts/sharing/: build_collaborator_summary.py  markdown_report_to_pdf.py
